[tool.poetry]
name = "datahelpers"
version = "0.2.0"
description = ""
authors = ["Alexander Belikov <abelikov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.8"
numpy = "^1.21.3"
pandas = "^1.3.4"
PyMySQL = "^1.0.2"
igraph = "^0.9.8"
pathos = "^0.2.8"
seaborn = "^0.11.2"
PyWavelets = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
