[tool.poetry]
name = "datahelpers"
version = "1.0.1"
description = "Data transformations"
authors = [
    "Alexander Belikov <abelikov@gmail.com>"
]
license = "MIT"
packages = [
    { include = "datahelpers/__init__.py" },
]

[tool.poetry.dependencies]
python = "~3.7.1"
numpy = "1.18"
pandas = "1.0.3"
PyMySQL = "^1.0.2"
igraph = "^0.9.8"
pathos = "^0.2.8"
seaborn = "0.9.0"
PyWavelets = "^1.1.1"
jupyter = "^1.0.0"
tabulate = "^0.8.9"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
